# bender-job

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
src/: atomizer.rs  bouncer.rs  command.rs  common.rs  data.rs  frames.rs  gaffer.rs  history.rs  job.rs  jobpaths.rs  jobtime.rs  lib.rs  optimize_blend.py  status.rs  task.rs
src/common/: blendfiles.rs  mod.rs  path.rs
tests/: integration_test.rs  test_bouncer.rs  test_gaffer.rs  test_job_states.rs  test_jobpaths.rs  test_jobs.rs
tests/common/: mod.rs
tests/resources/blendfiles/: UHD_3840x2160.blend  blenderrender_1-250.blend  current_frame_66.blend  cycles_1-1000.blend  cycles_1-250.blend  cycles_1-250_step10.blend  cycles_two_scenes.blend  cycles_video_output.blend  invalid.blend  packed_texture.blend  qu_1-250_11s_1080p_x0.5.blend  qu_1-250_20s_1080p_x0.5.blend  qu_1-250_5s_1080p_x0.5.blend  qu_1-25_1s_1080p_x0.25.blend
tests/resources/data/blendfiles/1be554e1f51b804637326e3faf41d2c9/: data.json
tests/resources/data/blendfiles/5873c0033e78b222bec2cb2a221487cf/: data.json
tests/resources/data/blendfiles/7841becc23339d86ef0ec0a18e312ba1/: data.json
tests/resources/data/blendfiles/9ac9b18f5e6d4f329acda411e3de8cde/: data.json
