[package]
name = "bender_job"
version = "0.1.0"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "*"
lazy_static = "1"
rand = "0.5"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"

bender_config = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-config.git" }
bender_bouncer = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-bouncer.git" }